Use JDK17 as default, restrict JDK8 to hbase-unsafe module